fix benefits img on mobile version

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -101,7 +101,13 @@
 
     &__img {
         width: 5rem;
+        flex-shrink: 0;
+        flex-basis: 24%;
         margin-bottom: 1rem;
+    }
+    &__text {
+        flex-shrink: 1;
+        flex-basis: 76%;
     }
 }
 
